<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1AC5D5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginBottom="5dp"
        android:text="@string/dailypayment"
        ads:layout_constraintBottom_toBottomOf="@+id/editTextText"
        ads:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="215dp"
        android:ems="10"
        android:hint="@string/_11"
        android:inputType="number"
        android:minHeight="48dp"
        android:visibility="visible"
        ads:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/_12"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="52dp"
        android:onClick="sub"
        android:text="সংরক্ষণ করুন"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="টাকা"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextText"
        app:layout_constraintStart_toEndOf="@+id/editTextText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:onClick="next"
        android:text="পরবর্তী"
        ads:layout_constraintBottom_toTopOf="@+id/adView"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.811"
        ads:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        ads:adSize="FULL_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="0.924"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>