<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1AC5D5">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="79dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="58dp"
        android:layout_height="23dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="39dp"
        android:text="হাজিরা"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/_12"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:text="অর্ধেক দিন"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:text="সারা দিন"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/checkBox" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="80dp"
        android:enabled="false"
        android:onClick="sav"
        android:text="সংরক্ষণ করুন"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/checkBox2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="next"
        android:text="Next"
        ads:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="36dp"
        android:text="@string/dailypayme"
        app:layout_constraintEnd_toStartOf="@+id/editTextText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/_11"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="45dp"
        android:layout_height="28dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="6dp"
        android:text="টাকা"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextText3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:onClick="reset"
        android:text="সব মুছে ফেলুন"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        ads:adSize="FULL_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:layout_constraintVertical_bias="0.685"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button5" />
</androidx.constraintlayout.widget.ConstraintLayout>